--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap');
 
 *,*:before,*:after {
     box-sizing: border-box;
@@ -10,13 +10,29 @@ body {
     font-size: 15px;
 }
 
+h1,h2,h3,h4,h5,h6 {
+    margin: 0;
+}
+/* Header start */
 .container {
     width: 1200px;
     margin: 0 auto;
 }
 
 .header {
-    background-color: #000;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+}
+
+.header-logo {
+    display: inline-block;
+}
+
+.header-logo img {
+    height: 65px;
 }
 
 .header-wrapper {
@@ -78,12 +94,77 @@ position: relative;
     font-weight: 600;
     font-size: 15px;
     text-decoration: none;
+    transition: color 0.2s ease;
 }
 
 .header__lng-link:last-child {
     margin-right: 0;
 }
 
+.header__lng-link:hover {
+    color: #fff;
+}
+
 .header__lng-link.active {
     color: #fff;
 }
+/* Header end */
+/* Intro start */
+.intro {
+    background: url('../img/intro_bg.jpg') no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.intro:after {
+    width: 100px;
+    height: 100px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background-color: #000;
+    content: '';
+    opacity: .2;
+}
+
+.intro-content {
+height: 750px;
+display: flex;
+align-items: center;
+position: relative;
+z-index: 2;
+}
+
+.intro-block {
+
+}
+
+.intro-title {
+    color: #FFFFFF;
+    font-size: 48px;
+    font-weight: 700; 
+    line-height: 1.5;
+    margin-bottom: 30px;
+}
+
+.btn {
+    min-width: 200px;
+    height: 50px;
+    padding: 0px 15px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 500;
+    color: #FFFFFF;
+    background-color: #DB2512;
+    text-decoration: none;
+    transition: background-color 0.2s ease;
+}
+
+.btn:hover {
+    background-color: #b2190b;
+}
+/* Intro end */
