--- a/style/style.css
+++ b/style/style.css
@@ -1,22 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap');
 
-*,*:before,*:after {
+*,
+*:before,
+*:after {
     box-sizing: border-box;
 }
 
 body {
     margin: 0;
-    font-family: 'Poppins', sans-serif; 
+    font-family: 'Poppins', sans-serif;
     font-size: 15px;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
 
 p {
     margin: 0 0 5px;
 }
+
 /* Header start */
 .container {
     width: 1200px;
@@ -46,26 +54,26 @@ p {
     align-items: center;
 }
 
-.nav{
-display: flex;
+.nav {
+    display: flex;
 }
 
 .nav-link {
-color: white;
-text-decoration: none;
-margin-right: 35px;
-font-weight: 600;
-position: relative;
+    color: white;
+    text-decoration: none;
+    margin-right: 35px;
+    font-weight: 600;
+    position: relative;
 }
 
 .nav-link:after {
     width: 100%;
     height: 2px;
-    background-color:  #fff;
+    background-color: #fff;
     position: absolute;
     top: 100%;
     left: 0;
-    content:'';
+    content: '';
     opacity: 0;
     transition: opacity .2s ease;
 }
@@ -87,13 +95,13 @@ position: relative;
 }
 
 .header_lng {
- display: flex;
- justify-content: flex-end;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .header__lng-link {
     margin-right: 8px;
-    
+
     color: #B7B7B7;
     font-weight: 600;
     font-size: 15px;
@@ -112,6 +120,7 @@ position: relative;
 .header__lng-link.active {
     color: #fff;
 }
+
 /* Header end */
 /* Intro start */
 .intro {
@@ -134,21 +143,19 @@ position: relative;
 }
 
 .intro-content {
-height: 750px;
-display: flex;
-align-items: center;
-position: relative;
-z-index: 2;
+    height: 750px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 2;
 }
 
-.intro-block {
-
-}
+.intro-block {}
 
 .intro-title {
     color: #FFFFFF;
     font-size: 48px;
-    font-weight: 700; 
+    font-weight: 700;
     line-height: 1.5;
     margin-bottom: 30px;
 }
@@ -171,27 +178,26 @@ z-index: 2;
 .btn:hover {
     background-color: #b2190b;
 }
+
 /* Intro end */
+.section {
+    margin-bottom: 100px;
+}
+
+.section.process {
+    margin-top: 50px;
+}
 
 /* Info srart */
 .info {
-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
-.info_wrapper {
-    display: flex;
-    margin: 0 -10px;
-}
-
-.info_block {
-width: 33.33%;
-padding: 0 10px;
-}
 
 .info_item {
-background-color: #fff;
-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-padding: 40px 40px 30px; 
+    background-color: #fff;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+    padding: 40px 40px 30px;
 }
 
 
@@ -207,7 +213,203 @@ padding: 40px 40px 30px;
 }
 
 .info_text {
-color: #B7B7B7;
-font-size: 18px;
+    color: #B7B7B7;
+    font-size: 18px;
 }
+
 /* Info end */
+
+/* Block start */
+
+.block_title {
+    margin-bottom: 15px;
+    font-size: 30px;
+    letter-spacing: 0.15em;
+    text-transform: uppercase;
+
+}
+
+.block_link {
+    letter-spacing: 0.15em;
+    color: #000;
+    display: inline-block;
+    margin-bottom: 60px;
+    text-transform: uppercase;
+}
+
+.block_link:hover {
+    text-decoration: none;
+}
+
+.wrapper {
+    display: flex;
+    margin: 0 -10px;
+}
+
+.block {
+    width: 33.33%;
+    padding: 0 10px;
+}
+
+/* Block End */
+
+/* services start */
+
+.services_item {
+text-decoration: none;
+}
+
+.services_item:hover .services_content_item {
+    opacity: 1;
+}
+
+.services_item:hover .services_content:after {
+    opacity: .7;
+}
+
+.services_content {
+    margin-bottom: 20px;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.services_content:after {
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+    transition: opacity 0.2s ease;
+}
+
+.services_content_item {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    z-index: 2;
+    transition: opacity 0.2s ease;
+}
+
+.services_img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #DB2512;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.services_text {
+    max-width: 270px;
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 0.23em;
+    position: absolute;
+    left: 30px;
+    bottom: 20px;
+    text-transform: uppercase;
+}
+.services_title {
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 0.23em;
+    color: #000;
+    text-transform: uppercase;
+}
+/* services end */
+
+/* about start */
+
+.about {
+    padding: 115px 0px;
+    height: 665px;
+    left: 0;
+    top: 1739px;
+    background-color: #171616;
+}
+
+.about_wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.about_block {
+    max-width: 505px;
+}
+
+.block_title {
+    height: 135px;
+    width: 490px;
+    margin-bottom: 42px;
+    font-size: 30px;
+    font-weight: 700;
+    color: #fff;
+    letter-spacing: 0.15em;
+    text-transform: uppercase;
+}
+
+.about_text {
+    margin-bottom: 48px;
+    width: 500px;
+    height: 180px;
+    font-size: 15px;
+    letter-spacing: 0.23em;
+    color: #B7B7B7;
+}
+
+.about_link {
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.15em;
+    color: #fff;
+}
+
+.about_link:hover{
+    text-decoration: none;
+    transition: text-decoration 0.2s ease;
+}
+/* About end */
+
+/* Process start */
+
+.process_title {
+   margin-bottom: 50px;
+    font-size: 148px;
+    font-weight: 900;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.process_subtitle {
+    margin-bottom: 90px;
+    font-size: 40px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.15em;
+    text-align: center;
+}
+
+.process_item {
+    background: #FFFFFF;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+    padding: 30px 30px 50px;
+    height: 100%;
+    min-height: 150px; 
+}
+
+/* Process end */
